--- a/install
+++ b/install
@@ -2,6 +2,12 @@
 
 set -exo pipefail
 
+install_virtualenv() {
+  pip || sudo easy_install pip
+  sudo pip install virtualenv
+}
+
+virtualenv || install_virtualenv
 virtualenv venv
 source venv/bin/activate
 which ansible-playbook || pip install ansible
