feat: simplify check for existence of `pip3`

--- a/install
+++ b/install
@@ -7,7 +7,7 @@ main() {
 }
 
 run_ansible_playbook() {
-  pip3 || install_pip3
+  which pip3 || install_pip3
   pip3 install --user pipenv
   python3 -m pipenv install --dev
   python3 -m pipenv run ansible-playbook "$@"
