--- a/install
+++ b/install
@@ -3,7 +3,7 @@
 set -exo pipefail
 
 main() {
-  run_ansible_playbook -vv site.yml --ask-become-pass
+  run_ansible_playbook -vv ansible/site.yml --ask-become-pass
 }
 
 run_ansible_playbook() {
