--- a/install
+++ b/install
@@ -2,27 +2,4 @@
 
 set -exo pipefail
 
-main() {
-  run_ansible_playbook -vv ansible/site.yml --ask-become-pass
-}
-
-run_ansible_playbook() {
-  which pip3 || install_pip3
-  pip3 install --user pipenv
-  python3 -m pipenv install --dev
-  python3 -m pipenv run ansible-playbook "$@"
-}
-
-install_pip3() {
-  install_pip3_apt || install_pip3_pacman || exit
-}
-
-install_pip3_apt() {
-  which apt-get && sudo apt-get install python3-pip
-}
-
-install_pip3_pacman() {
-  which pacman && sudo pacman -Syu python-pip
-}
-
-main
+./bin/run-ansible-playbook -vv ansible/site.yml --ask-become-pass
